Small Spacing Issue Fixed

--- a/Portfolio/PortfolioItems/Styles/portfolio.css
+++ b/Portfolio/PortfolioItems/Styles/portfolio.css
@@ -42,4 +42,9 @@
     color: #E1B3FF;
 }
 
+h1
+{
+    text-align: center;
+}
+
 
